src/objects/SPE_Category_Transform_Table__c.object
<CustomObject>
    <fields>
        <fullName>FromValue__c</fullName>
        <label>From Value</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ToValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ToValue</label>
        <referenceTo>SPE_CategoryMaster__c</referenceTo>
        <relationshipLabel>Category Transform Table</relationshipLabel>
        <relationshipName>Category_Transform_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transform__c</fullName>
        <label>Transform</label>
        <picklist>
            <picklistValues>
                <fullName>Category Area</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Category Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Category Transform Table</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Category Transform Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Transform Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>